feat: create homework topic and add some base class and update jdk to version 17